# local-RAG

./: .env.example  .gitignore  .mcp.json  README.md  SKILL.md  config.example.json  mcp.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
app/: config.py  main.py  proxy.py  server.py
app/daemon/: __init__.py  __main__.py  server.py
app/migrations/: 001_initial.py  __init__.py
app/pipelines/: ingestion.py  retrieval.py
app/services/: chunking.py  embeddings.py  entity_extractor.py  graph_store.py  note_store.py  ocr.py  task_tracker.py  vector_store.py
app/utils/: text.py
references/: setup-guide.md  workflow-detail.md
scripts/: cleanup.sh  install.sh  quick_ingest.py  start.sh  upgrade.sh
skills/local-rag/: SKILL.md
tests/: benchmark_extractor.py  test_e2e.py  test_improvements.py  test_mcp.py
