[project]
name = "local-rag-mcp"
version = "0.1.0"
description = "本地 RAG MCP Server，支持 PaddleOCR 处理扫描版 PDF 和图片"
requires-python = ">=3.11"

dependencies = [
    # MCP
    "mcp>=1.0.0",

    # Configuration
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # Core RAG
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",

    # Vector store
    "chromadb>=0.5.0",

    # Embeddings
    "sentence-transformers>=3.3.0",

    # OCR
    "paddlepaddle-gpu>=3.3.0",
    "paddleocr>=3.0.0",
    "PyMuPDF>=1.24.0",

    # Utilities
    "Pillow>=10.0.0",
    "modelscope>=1.20.0",

    # Graph database (Neo4j)
    "neo4j>=5.20.0",
    "jieba>=0.42.1",

    # HTTP client for LLM API
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
